# honours_project_numerical_experiments

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/experiments/: main.py
src/experiments/common/: funcs.py  logistic_regression.py  model.py  neural_network.py  sgd.py
src/experiments/deepfool/: __init__.py  main.py
src/experiments/fashion_mnist/: main.py
src/experiments/fashion_mnist_torch/: main.py
src/experiments/formal_bound/: main.py
src/experiments/formal_bound_sympy/: main.py
src/experiments/mnist_torch/: main.py  model.py
src/experiments/universal_perturbations/: __init__.py  main.py
