[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Manuel Brea <m.brea.carreras@gmail.com>"]

[tool.poetry.dependencies]
#torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp39-cp39-linux_x86_64.whl" }
#torchvision = { url = "https://download.pytorch.org/whl/cpu/torchvision-0.11.0%2Bcpu-cp39-cp39-linux_x86_64.whl" }
#torch-scatter = { url = "https://data.pyg.org/whl/torch-1.10.0%2Bcpu/torch_scatter-2.0.9-cp39-cp39-linux_x86_64.whl" }
#torch-sparse = { url = "https://data.pyg.org/whl/torch-1.10.0%2Bcpu/torch_sparse-0.6.12-cp39-cp39-linux_x86_64.whl" }
python = "3.9.7"
numpy = "^1.21.4"
pycairo = "^1.20.1"
matplotlib = "^3.5.0"
sklearn = "^0.0"
PyGObject = "^3.42.0"
#torch-geometric = "^2.0.2"
#networkx = "^2.6.3"
torch = "^1.10.1"
torchvision = "^0.11.2"
imgaug = "^0.4.0"
pandas = "^1.4.1"
sympy = "^1.9"
multiprocessing-logging = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
